sort.pancake.lessons.sort.pancake.BasicPancake.scala.error
BasicPancake:17: error: not found: value rang
		retourne(getTaillePile() - rang)
                                           ^